test/parser/Queries/syntax_errors/fail_K-WhereExpr-11.xq
(:**** eq ********foo****** ne *********** where *************foo******** let *) for 
: Test: K-WhereExpr-11         $    eq                 eq     where    for    :)
(: Written by: Frans  let Englich       where    where          eq        ne       :)
(: Date: 2006-10-05T18:29:37+02:00    let             let   for       for   :)
(: Purpose: eq  A for/where expression combined with fn:boolean and xs:anyURI. :)
(:********* for ***** $  eq *******foo****************foo************foo*:)empty(for $i in (1, 2, current-time())[1]  for where xs:anyURI"") return true where ( for ))